--- a/airflow/defaults.yaml
+++ b/airflow/defaults.yaml
@@ -122,10 +122,17 @@ airflow:
         - airflow-webserver
         - airflow-celery-worker
       queues: []
-      ports:
-        - 5555/tcp
-        - 15672/tcp
-        - 18080/tcp
+      firewall:
+        zone: public
+        ports:
+          - 4369/tcp  # epmd
+          - 5432/tcp  # postgres
+          - 5555/tcp  # celeryflower
+          - 5672/tcp  # rabbitmq-amqp
+          - 8793/tcp  # airflow-logs
+          - 15672/tcp  # rabbitmq-ui
+          - 25672/tcp  # rabbitmq
+          - 18080/tcp  # airflow-ui
   pkg:
     airflow:
       version: 2.1.0
