--- a/pillar.example
+++ b/pillar.example
@@ -92,15 +92,17 @@ airflow:
         - airflow-celery-worker
       # https://airflow.apache.org/docs/apache-airflow/stable/executor/celery.html
       queues: []
-      ports:
-        - 5432/tcp
-        - 8793/tcp
-        - 5555/tcp
-        - 5672/tcp
-        - 25672/tcp
-        - 4369/tcp
-        - 15672/tcp
-        - 18080/tcp
+      firewall:
+        zone: public
+        ports:
+          - 4369/tcp  # epmd
+          - 5432/tcp  # postgres
+          - 5555/tcp  # celeryflower
+          - 5672/tcp  # rabbitmq-amqp
+          - 8793/tcp  # airflow-logs
+          - 15672/tcp  # rabbitmq-ui
+          - 25672/tcp  # rabbitmq
+          - 18080/tcp  # airflow-ui
   pkg:
     airflow:
       version: 2.1.0
